fix 8th signup css overflow

--- a/intranet/static/css/responsive.css
+++ b/intranet/static/css/responsive.css
@@ -167,6 +167,23 @@
     }
 }
 
+@media (max-width: 430px) {
+    /* shrink text size */
+    .primary-content .middle .block-title {
+        height: 22px;
+        margin-top: 6px;
+    }
+
+    .primary-content .middle .block-title h2 {
+        font-size: 16px;
+    }
+
+    .primary-content .middle .switch {
+        position: fixed;
+        right: 26px;
+    }
+}
+
 @media (max-width: 400px) {
     div#activity-list .backbtn > i {
         left: 5px;
